<resources>

    <string name="app_name">Parcocoon</string>
    <string name="Alamat_email">Alamat Email</string>
    <string name="login">LOGIN</string>
    <string name="pengguna_baru_daftar_disini">Pengguna Baru ? Daftar Disini</string>
    <string name="parcocoon_petshop">PARCOCOON PETSHOP</string>
    <string name="password">Password</string>
    <string name="selamat_datang_silahkan_login">Selamat Datang, Silahkan Login</string>
    <string name="daftar_sign_up">Daftar / Sign UP</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="passwordCnfrm">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="sudah_punya_akun_masuk_disini">Sudah Punya Akun ? Masuk Disini</string>
    <string name="sign_up">SIGN UP</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="lupa_passwordFPass">Lupa Password</string>
    <string name="silahkan_isi_alamat_email_untuk_reset_password">Silahkan isi Alamat Email Untuk Reset Password</string>
    <string name="kirim_FPass">kirim</string>
    <string name="loginfail">Email atau Password yang anda masukan SALAH</string>
    <string name="home">Info Makanan</string>
    <string name="diskusi">Diskusi</string>
    <string name="health">Info Kesehatan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_makanan_dan_suplemen">Info Makanan dan Suplemen Hewan</string>
    <string name="forum_diskusi_tentang_hewan_peliharaan">Forum Diskusi Tentang Hewan Peliharaan</string>
    <string name="info_kesehatan_hewan_peliharaan">Info Kesehatan Hewan Peliharaan</string>
    <string name="logout">Logout</string>
    <string name="masukan_pesan">Masukan Pesan</string>
    <string name="beauty">Premiun cat food</string>
    <string name="grooming">Tips grooming yang baik</string>
    <string name="selengkapnya">Lihat Selengkapnya</string>


    //title

    <string-array name="kesehatan_title">
        <item>Tips Grooming Dengan Baik</item>

    </string-array>

    //desc
    <string-array name="DescSehat">
        <item> Walau kucing bisa membersihkan dirinya sendiri, tetapi sebagai pemiliknya, kamu tetap perlu memandikannya secara rutin, ya. Sebaiknya, mandikan kucingmu setiap 4–6 minggu sekali.Hal ini penting untuk dilakukan guna menjaga kebersihan dan kesehatan hewan kesayanganmu itu. \nSebelum memandikan kucing, ada beberapa hal yang perlu kamu lakukan terlebih dahulu, yaitu:\n\nPertama-tama, kamu perlu menentukan waktu mandi yang tepat terlebih dahulu. Pastikan pada waktu mandi tersebut kucingmu sedang dalam keadaan sehat, rileks, dan senang atau dalam mood yang baik.Untuk membantu meningkatkan suasana hati kucing kesayanganmu, kamu bisa memberi makan atau snack dan mengajaknya bermain terlebih dahulu, sesaat sebelum kamu memandikannya.\nSebelum memandikan kucing, kamu juga harus memastikan peralatan mandinya sudah tersiapkan dengan baik di tempat mandinya. Ini berguna untuk memudahkanmu selama proses memandikan kucing.\nBerikut adalah beberapa hal yang perlu kamu persiapkan saat memandikan kucing:\n a.Air hangat suam-suam kuku\n b.Baskom atau wadah tempat air\n c.Gayung/selang/semprotan air\n d.Sampo Kucing\n e.Handuk\n f.Pengering rambut\n g.Keranjang kucing\n h.Mainan Kucing\n\nCara Memandikan Kucing yang Tepat\nLangkah pertama untuk memandikan kucing adalah dengan membawanya ke tempat ia akan dimandikan, misalnya di wastafel atau kamar mandi.\nPosisikan kucing di tempat tersebut dengan perlahan. Kemudian, selalu pegang tengkuknya dengan 1 tangan, ya. Ini berguna untuk mencegah kucingmu kabur atau berontak. Jika ia tidak mau dimandikan, kamu bisa mencoba memberikan mainan kesukaannya saat ia sedang mandi.\nJika memungkinkan, kamu juga bisa minta pertolongan salah satu anggota keluarga untuk membantu memegangi kucingmu selama dimandikan. Dengan begitu, kamu bisa lebih bebas saat melakukan langkah-langkah memandikan kucing selanjutnya.\nJika kamu sudah merasa nyaman dengan posisi memandikannya, kamu bisa mulai membasahi tubuh kucingmu, mulai dari leher hingga ekornya, dengan air hangat secara perlahan-lahan hingga semua bulunya benar-benar basah.\nHindari menyiram atau menyipratkan air ke area wajah kucing, karena ini akan membuatnya kaget atau marah.\n\nSetelah tubuh dan bulu kucingmu sudah benar-benar basah, tuangkan sedikit sampo ke tubuhnya. Kemudian, gosokkan sampo mulai dari leher, punggung, perut, ekor, hingga kakinya dengan lembut dan perlahan.\nIngat, selalu gunakan produk sampo khusus kucing ya, yang bisa kamu dapatkan dengan mudah di pet shop terdekat.\nSebaliknya, hindari menggunakan sampo manusia pada kucing kesayangamu. Pasalnya, kandungan zat kimia pada sampo manusia bisa berbahaya jika tak sengaja tertelan oleh kucing. Lagipula, sampo untuk kulit manusia juga cenderung bisa mengiritasi kulit kucing.\n\nJika seluruh tubuh kucing sudah selesai diberi sampo, selanjutnya kamu perlu membilasnya dengan air hangat. Pastikan kamu membilas hingga semua sampo di tubuh kucingmu benar-benar besih.\nBila tidak dibersihkan dengan baik, sampo yang tertinggal bisa menyebabkan kotoran menempel di tubuh kucing dan berisiko mengiritasi kulit kucing kesayanganmu.\nSetelah selesai membersihkan tubuhnya, kamu juga perlu membersihkan wajah kucingmu dengan menggunakan kain lap basah. Berhati-hatilah saat membersihkan bagian di sekitar mata dan telinganya, karena ini adalah daerah yang sangat sensitif bagi kucing.\n\nJika ada kotoran di wajah kucing yang sulit dibersihkan dengan air, kamu bisa menambahkan 1–2 tetes sampo pada kain lap basah untuk membersihkan kotoran tersebut.\nSetelah dimandikan, keringkan tubuhnya dengan menggunakan handuk yang lembut hingga air tidak lagi menetes dari bulunya.\n\nKemudian, masukkan kucingmu ke dalam kandangnya dan tempatkan di ruangan yang hangat atau di bawah sinar matahari. Kamu juga bisa membantu mengeringkan bulunya dengan menggunakan pengering rambut dari luar kandang.\n\nJika bulunya sudah benar-benar kering, barulah keluarkan kucingmu dari kandangnya. Setelah itu, usap lembut ia dan berikan makanan kesukaannya sebagai hadiah. Dengan begitu, kucingmu akan kembali rileks dan senang.\n\nApabila kucingmu tampak terkena infeksi kutu, kamu juga bisa membersihkan bulu-bulunya dengan sisir serit setelah memandikannya.\n\nNah, itulah tadi beberapa cara memandikan kucing yang bisa kamu terapkan di rumah. Namun, apabila kamu merasa sulit memandikan kucing sendiri, kamu bisa memakai jasa grooming di pet shop untuk membersihkan tubuh kucing kesayanganmu.\n\nJika kamu masih memiliki pertanyaan terkait memandikan kucing atau hewan peliharaan lainnya, kamu juga bisa berkonsultasi dengan admin petshop mengenai hal ini.</item>



    </string-array>
    <string-array name="Foodtitle">
        <item>Beuty Premium Cat Food</item>
        <item>Bolt Tuna Ikan</item>
        <item>Catchoize Adult</item>
        <item>Catchoize Kitten</item>
        <item>Excellent Pet Food</item>
        <item>Felibite</item>
        <item>Felibite Mother Kitten</item>
        <item>LifeCat</item>
        <item>Mantoel</item>
        <item>Markotop Salmon Ayam</item>
        <item>Me-O Adult Tuna</item>
        <item>Me-O </item>
        <item>MyPet</item>
        <item>Oricat Kitten</item>
        <item>Rajafit</item>
        <item>Rajafit Hair and Skin</item>
        <item>Royal Canin First Age</item>
        <item>Whiskas</item>
        <item>Whiskas Adult</item>
        <item>TomsCat</item>
        // lamd salmon dan chicken
    </string-array>


    //desc
    <string-array name="DescFood">
        <item>Beuty Premium Cat Food diformulasikan untuk adult dan kitten menggunakan bahaan baku natural yang nutrisi yang difromulasikan secara seimbang.</item>
        <item>Untuk kucing usia 1 tahun ke atas membuat kulit sehat dan bulu berkilau, serta mengurangi resiko penyakit FLUTD</item>
        <item>Catchoize Adult untuk usia 1 tahun keatas varian salmon dan tuna, membantu kesehatan mata dan kandungan seratnya membantu melancarkan pencernaan</item>
        <item>Catchoize Kitten untuk usia 6 sampai 12 bulan dengan protein 30% kandungan salmon dan tuna dengan susu yang disukai anak kucing</item>
        <item>Excellent Pet Food menyehatkan kulit dan memperindah bulu dan menyehatkan mata</item>
        <item>Kombinasi dari nutrisi alami yang disatukan dengan ribuan ekspresi cinta untuk kucing. Diperkaya dengan bahan berkualitas yang disukai &amp; dibutuhkan oleh kucing di setiap gigitannya</item>
        <item>Felibite Mother and Kitten adalah makanan kucing multifungsi yang diformulasikan khusus untuk indukan selama hamil dan menyusui serta untuk anakan kucing umur 2 sampai 12 bulan.</item>
        <item>Lifecat merupakan makanan kucing yang mengandung banyak vitamin ; mineral seperti vitamin B12 , Vit D Vit A, Vit E dan masih banyak lagi bahan yang sangat bermanfaat untuk kucing kesayangan anda.</item>
        <item>Cat Food MANTOEL (Mantap Betoel) Rasa Tuna Chicken Milk,TRIPLE KIBBLE,Blended with Insight for ADULT and KITTEN</item>
        <item>Makanan kucing murah berkualitas dengan dua variant, Tuna dan Salmon</item>
        <item>Makanan kucing untuk usia 1 tahun keatas yang mengandung asam amino yang penting untuk penglihatan serta dapat meningkatkan penglihatan.</item>
        <item>Nutrisi seimbang dan rasa yang sangat disukai oleh kitten, memperkuat kekebalan tubuh dan Taurine untuk kesehatan mata kucing.</item>
        <item>Makanan Tuna untuk kesehatan kulit, bulu, pencernaan dan tulang gigi</item>
        <item>Makanan Anak Kucing Premium Harga Ekonomis ,Formula khusus pertumbuhan anak kucing (KITTEN) mulai dari umur 1  sampai 12 bulan, untuk BULU dan KULIT yang SEHAT.</item>
        <item>Makanan untuk usia 3 tahun sampai 10 tahun, formula khusus dari amerika untuk melengkapi nutrisi pada kucing</item>
        <item>Rajafit hair and skin care dirancang khusus untuk menyehatkan rambut dan kulit hewan peliharaan </item>
        <item>ROYAL CANIN Mother &amp; Babycat diformulasikan untuk memenuhi kebutuhan nutrisi induk kucing dan anaknya. Sesuai untuk induk kucing yang menyusui dan juga anak kucing berusia 1 sampai 4 bulan, makanan ini mengandung antioksidan untuk mendukung pertahanan tubuh alami anak kucing.</item>
        <item>WHISKAS makanan kucing lengkap dan seimbang,Lengkungan WHISKAS Dry akan membantu merawat kesehatan mulut dan gigi mereka.Diperkaya dengan kalsium dan fosfor, termasuk vitamin D untuk pertumbuhan tulang dan tubuh yang sehat.</item>
        <item>WHISKAS makanan kering kucing untuk usia diatas satu tahun rasa ikan tuna dengan sistem vital yang mendukung hewan peliharaan anda</item>
        <item>Terbuat dari bahan sumber protein berkualitas tinggi yang dilengkapi dengan asam amino untuk menunjang pertumbuhan bulu dan regenerasi kulit.Mengandung EPA,DHA,dan Biotin untuk bulu yang lebih bercahaya dan kulit yang sehat</item>


    </string-array>
</resources>