<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <View
        android:id="@+id/ViewWaveRegister"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/ColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/ViewWavebg"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/v_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewWaveRegister" />

    <TextView
        android:id="@+id/tv_daftarpage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/daftar_sign_up"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_rectangle"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Nama Pengguna"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewWavebg"
        tools:ignore="Autofill,HardcodedText" />

    <EditText
        android:id="@+id/editTextInputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_rectangle"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/alamat_email"

        android:inputType="text"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextInputPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_rectangle"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInputEmail" />

    <EditText
        android:id="@+id/editTextInputRetypePass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_rectangle"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/konfirmasi_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInputPass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignUpbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_bg"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInputRetypePass" />

    <TextView
        android:id="@+id/tvOnClickLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/sudah_punya_akun_masuk_disini"
        android:textAlignment="center"
        android:textColor="@color/ColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpbtn" />

    <View
        android:id="@+id/viewBtm"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="82dp"
        android:background="@drawable/ic_btmwave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOnClickLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>